--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -26,3 +26,4 @@
 @import 'omf/custom/cards.scss';
 @import 'omf/custom/menus.scss';
 @import 'omf/custom/tabs.scss';
+@import 'omf/custom/tooltips.scss';
