--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -130,7 +130,9 @@
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td [attr.colspan]="columns.length + 1">There are no loan products.</td>
+        <td [attr.colspan]="columns.length + 1">
+          No loan products have been created yet.
+        </td>
       </tr>
     </ng-template>
   </p-table>
