--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -25,6 +25,7 @@
               <app-loan-products-builder
                 [assets]="assets$ | async"
                 [creditors]="creditors$ | async"
+                (formSubmit)="lpSvc.loanProductAdd($event)"
               ></app-loan-products-builder>
             </p-tabPanel>
             <p-tabPanel>
