Updates to form builder

--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -60,6 +60,7 @@
         <td>
           {{ product.paymentImpact | currency : 'USD' : 'symbol' : '1.0-2' }}
         </td>
+        <td>{{ product.term }} mos</td>
         <td>{{ product.apr }}%</td>
         <td>{{ product.ndi | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
         <td>Status</td>
