--- a/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
@@ -1,30 +1,43 @@
-<div class="loan-form-container">
+<div
+  class="loan-form-container"
+  *ngIf="{ isEditing: isEditing$ | async } as comp"
+>
   <form [formGroup]="loanProductsForm" (ngSubmit)="onSubmit()">
+    @if(comp.isEditing) {
+    <div>
+      <a class="float-end" (click)="reset()">Cancel</a>
+      <p>Editing Loan Product</p>
+    </div>
+    }
+
     <div class="row">
       <div class="col col-12 col-md-7">
         <div class="section">
           <h2>Assets <span class="sub-title">Select for collateral</span></h2>
           @if(assetsFormArray.controls.length) {
-          <div
-            *ngFor="let asset of assetsFormArray.controls; let i = index"
-            class="item"
-          >
-            <div>
+          <div formArrayName="assets">
+            <div
+              *ngFor="let asset of assetsFormArray.controls; let i = index"
+              [formGroupName]="i"
+              class="item"
+            >
               <p-checkbox
                 [binary]="true"
                 [label]="asset.value.label"
+                formControlName="selected"
                 (onChange)="onSelectAsset(i)"
               ></p-checkbox>
-            </div>
-            <div class="sub-text">
-              <div class="me-2"></div>
-              <strong>Valued:</strong> {{ asset.value.assetValue | currency }}
 
-              <div class="me-2" *ngIf="asset.value.totalOwed">
-                <strong>Owed:</strong> {{ asset.value.totalOwed | currency }}
-              </div>
-              <div *ngIf="asset.value.apr">
-                <strong>APR:</strong> {{ asset.value.apr }}%
+              <div class="sub-text">
+                <div class="me-2"></div>
+                <strong>Valued:</strong> {{ asset.value.assetValue | currency }}
+
+                <div class="me-2" *ngIf="asset.value.totalOwed">
+                  <strong>Owed:</strong> {{ asset.value.totalOwed | currency }}
+                </div>
+                <div *ngIf="asset.value.apr">
+                  <strong>APR:</strong> {{ asset.value.apr }}%
+                </div>
               </div>
             </div>
           </div>
@@ -70,7 +83,10 @@
       </div>
     </div>
     <div class="text-end">
-      <p-button type="submit" label="Add Loan Product"></p-button>
+      <p-button
+        type="submit"
+        [label]="comp.isEditing ? 'Update Loan Product' : 'Add Loan Product'"
+      ></p-button>
     </div>
   </form>
 </div>
