--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -35,7 +35,7 @@
               <ng-template pTemplate="header">
                 <lib-icons icon="eye" class="me-2"></lib-icons> Customer View
               </ng-template>
-              Coming soon!
+              <lib-quote-form></lib-quote-form>
             </p-tabPanel>
           </p-tabView>
         </div>
