--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -9,7 +9,7 @@
 @import 'bootstrap/scss/grid';
 // @import 'bootstrap/scss/nav';
 // @import 'bootstrap/scss/navbar';
-// @import 'bootstrap/scss/tables';
+@import 'bootstrap/scss/tables';
 // @import 'bootstrap/scss/type';
 
 // Prime icons
