--- a/libs/brand/src/styles/omf/custom/_tooltips.scss
+++ b/libs/brand/src/styles/omf/custom/_tooltips.scss
@@ -1,8 +1,8 @@
 .p-tooltip {
   &.p-tooltip-right .p-tooltip-arrow {
-    border-right-color: #fff !important;
+    //    border-right-color: #fff !important;
   }
   .p-tooltip-text {
-    background: #fff !important;
+    //  background: #fff !important;
   }
 }
