--- a/libs/brand/src/styles/omf/custom/_typography.scss
+++ b/libs/brand/src/styles/omf/custom/_typography.scss
@@ -22,7 +22,18 @@ h3 {
   font-weight: 500;
   margin-bottom: 15px;
 }
-
+.grey {
+  color: grey;
+}
+.red {
+  color: red;
+}
+.green {
+  color: green;
+}
+.orange {
+  color: orange;
+}
 /*
 @media (min-width: 992px) {
   h1 {
