--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @import 'omf/theme'; //
 
 // Global encapsulated styles
+@import 'omf/custom/accordion.scss';
 @import 'omf/custom/typography.scss';
 @import 'omf/custom/layout.scss';
 @import 'omf/custom/table.scss';
