--- a/libs/masterpage/src/lib/masterpage/sidebar/sidebar.component.html
+++ b/libs/masterpage/src/lib/masterpage/sidebar/sidebar.component.html
@@ -1,32 +1,37 @@
-<div id="sidebar" *ngIf="{ loanId: loanId$ | async } as comp">
+<div
+  id="sidebar"
+  *ngIf="{
+    loanId: loanId$ | async,
+    applications: applications$ | async,
+    routeCurrent: routeCurrent$ | async,
+  } as comp"
+>
   <p class="sidebar-title">Applications</p>
-  @if(applications.length) { @for (app of applications; track $index) {
-  <button
-    class="p-button mb-1 w-100 text-start sidebar-btn"
-    [ngClass]="{
-      'p-button-inactive': app.loanID !== comp.loanId
-    }"
-    [routerLink]="['/', 'loan', app.loanID, 'loan-products']"
+
+  @if(comp.applications?.length) {
+  <p-accordion
+    styleClass="accordion-lt no-animation no-pad-body"
+    [activeIndex]="openTabs()"
+    [multiple]="true"
   >
-    <span>#{{ app.loanID }}</span>
-    <span
-      ><a class="sidebar-actions"><i class="pi pi-bars"></i></a>
-      <div class="sidebar-popout">
-        <div class="nav-list">
-          <div
-            *ngFor="let item of navItems"
-            class="nav-item"
-            [ngClass]="{ completed: item.completed }"
-          >
-            <a
-              class="nav-label d-block"
-              [routerLink]="['/', 'loan', app.loanID, item.path]"
-              >{{ item.label }}</a
-            >
-          </div>
-        </div>
+    @for (app of comp.applications; track $index) {
+    <p-accordionTab transitionOptions="0ms">
+      <ng-template pTemplate="header"> #{{ app.loanID }}</ng-template>
+      @for (item of navItems; track $index) {
+      <div>
+        <a
+          class="sidebar-link"
+          [routerLink]="['/', 'loan', app.loanID, item.path]"
+          [ngClass]="{
+            'sidebar-link-active':
+              item.path === comp.routeCurrent && app.loanID === comp.loanId
+          }"
+          >{{ item.label }}</a
+        >
       </div>
-    </span>
-  </button>
-  } }
+      }
+    </p-accordionTab>
+    }
+  </p-accordion>
+  }
 </div>
