--- a/libs/brand/src/styles/omf/custom/_accordion.scss
+++ b/libs/brand/src/styles/omf/custom/_accordion.scss
@@ -1,16 +1,21 @@
 .p-accordion {
   .p-accordion-header {
     border-radius: var(--border-radius);
-    a.p-accordion-header-link,
-    a.p-accordion-header-link .p-accordion-toggle-icon {
-      color: #fff;
-    }
   }
-  &.accordion-lt .p-highlight {
-    background-color: var(--color-interact);
-    border: var(--color-interact);
-    .p-accordion-header-link {
-      color: #fff;
+  &.accordion-lt {
+    .p-accordion-header {
+      a.p-accordion-header-link,
+      a.p-accordion-header-link .p-accordion-toggle-icon {
+        color: #fff;
+      }
+    }
+
+    .p-highlight {
+      background-color: var(--color-interact);
+      border: var(--color-interact);
+      .p-accordion-header-link {
+        color: #fff;
+      }
     }
   }
   &.no-pad-body .p-accordion-content {
