--- a/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-builder/loan-products-builder.component.html
@@ -11,7 +11,7 @@
     }
 
     <div class="row">
-      <div class="col col-12 col-md-7">
+      <div class="col col-12 col-md-7 mb-3">
         <div class="section">
           <h2>Assets <span class="sub-title">Select for collateral</span></h2>
           @if(assetsFormArray.controls.length) {
@@ -111,7 +111,7 @@
 
         }
       </div>
-      <div class="col col-12 col-md-5">
+      <div class="col col-12 col-md-5 mb-3">
         <lib-form-generator
           [formModel]="loanProductsModel"
           [formGroup]="loanProductsForm"
