--- a/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.scss
+++ b/apps/loan/loan-products/src/app/components/title-bar/title-bar.component.scss
@@ -1,13 +1,15 @@
 .title-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   .title {
     font-size: 24px;
     margin-bottom: 0.5rem;
   }
   .align {
     display: flex;
+    align-items: center;
+  }
+  @media (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
   }
 }
