Add modify loan products component

--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -17,7 +17,7 @@
             ></app-loan-products-grid>
           </p-card>
           <p-card styleClass="p-2">
-            <h2>Modify All Loan Products</h2>
+            <app-modify-loan-products></app-modify-loan-products>
           </p-card>
         </div>
         <div class="col col-12 col-md-4 mb-3">
