Add reactive form support to standalone forms lib components

--- a/apps/loan/loan-products/src/app/components/modify-loan-products/modify-loan-products.component.html
+++ b/apps/loan/loan-products/src/app/components/modify-loan-products/modify-loan-products.component.html
@@ -4,7 +4,7 @@
   <div class="d-flex">
     <lib-number
       mode="currency"
-      [control]="modifyForm.get('loanAmount')"
+      formControlName="loanAmount"
       placeholder="$1,000"
       class="me-2"
     ></lib-number>
