Add support for reactive forms directives

--- a/apps/loan/loan-products/src/app/components/modify-loan-products/modify-loan-products.component.html
+++ b/apps/loan/loan-products/src/app/components/modify-loan-products/modify-loan-products.component.html
@@ -1,12 +1,14 @@
 <h2>Modify All Loan Products</h2>
-<p>Modify Loan Amount</p>
+
 <form [formGroup]="modifyForm">
-  <div class="d-flex">
+  <div class="d-flex" style="align-items: center">
     <lib-number
+      label="Modify Loan Amount"
       mode="currency"
       formControlName="loanAmount"
       placeholder="$1,000"
       class="me-2"
+      hint="Negative amounts are supported"
     ></lib-number>
     <p-button label="Update All" (click)="updateLoanAmount()"></p-button>
   </div>
