--- a/libs/forms/src/lib/components/form-fields/number/number.component.html
+++ b/libs/forms/src/lib/components/form-fields/number/number.component.html
@@ -24,8 +24,8 @@
         [inputId]="id || formFieldID"
         [ngClass]="styleClass"
         [name]="name ?? ''"
-        [min]="min ?? 0"
-        [max]="max ?? 9999999999999999999999999999999"
+        [min]="min ?? undefined"
+        [max]="max ?? undefined"
         [maxlength]="maxLength ?? 9999999999999999999999999999999"
         [showButtons]="showButtons ?? false"
         [prefix]="currencySymbol ?? ''"
