--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -54,7 +54,10 @@
                 </div>
               </div>
 
-              <lib-quote-form></lib-quote-form>
+              <lib-quote-form
+                [formDefaults]="storage.customerSelection$ | async"
+                (quoteFormChanged)="quoteFormChanged($event)"
+              ></lib-quote-form>
             </p-tabPanel>
           </p-tabView>
         </div>
