Refactor storage property name

--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -55,7 +55,7 @@
               </div>
 
               <lib-quote-form
-                [formDefaults]="storage.customerSelection$ | async"
+                [formDefaults]="storage.quote$ | async"
                 (quoteFormChanged)="quoteFormChanged($event)"
               ></lib-quote-form>
             </p-tabPanel>
