Wire up credit/non credit modals

--- a/apps/loan/loan-products/src/app/components/credit-products-builder/credit-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/credit-products-builder/credit-products-builder.component.html
@@ -1,1 +1,7 @@
-<p>credit-products-builder works!</p>
+<lib-form-generator
+  [formModel]="formModel"
+  [formGroup]="creditProductForm"
+  [options]="formOptions"
+  (completed)="submit()"
+>
+</lib-form-generator>
