--- a/apps/loan/loan-products/src/app/components/non-credit-products-builder/non-credit-products-builder.component.html
+++ b/apps/loan/loan-products/src/app/components/non-credit-products-builder/non-credit-products-builder.component.html
@@ -1,1 +1,7 @@
-<p>non-credit-products-builder works!</p>
+<lib-form-generator
+  [formModel]="formModel"
+  [formGroup]="nonCreditProductForm"
+  [options]="formOptions"
+  (completed)="submit()"
+>
+</lib-form-generator>
