Code quality enhancements

--- a/libs/forms/src/lib/components/form-fields/radio/radio.component.html
+++ b/libs/forms/src/lib/components/form-fields/radio/radio.component.html
@@ -17,31 +17,13 @@
             <p-radioButton
               [id]="id || formFieldID"
               [name]="name || (label || placeholder | slug)"
-              [inputId]="
-                'field-' +
-                  (option.value | slug) +
-                  i +
-                  '-' +
-                  (option.label | slug) ||
-                name ||
-                (label || placeholder | slug)
-              "
+              [inputId]="option | oid : i : 30"
               [formControl]="formControl"
               [value]="option.value"
             ></p-radioButton>
-            <label
-              class="radio-label"
-              [for]="
-                'field-' +
-                  (option.value | slug) +
-                  i +
-                  '-' +
-                  (option.label | slug) ||
-                name ||
-                (label || placeholder | slug)
-              "
-              >{{ option.label }}</label
-            >
+            <label class="radio-label" [for]="option | oid : i : 30">{{
+              option.label
+            }}</label>
           </div>
         </div>
       </ng-container>
