Updated sidebar functionality

--- a/libs/masterpage/src/lib/masterpage/masterpage.component.html
+++ b/libs/masterpage/src/lib/masterpage/masterpage.component.html
@@ -14,7 +14,7 @@
     ></a>
     <lib-sidebar></lib-sidebar>
     } @else {
-    <a class="float-end" (click)="leftColOpen = !leftColOpen"
+    <a class="float-end linky2" (click)="leftColOpen = !leftColOpen"
       ><i class="pi pi-chevron-right"></i
     ></a>
     }
